# reflex-local-auth

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  publish.yml
custom_components/reflex_local_auth/: __init__.py  auth_api.py  auth_session.py  local_auth.py  login.py  middleware.py  registration.py  routes.py  user.py
custom_components/reflex_local_auth/pages/: __init__.py  components.py  login.py  registration.py
local_auth_demo/: alembic.ini  requirements.txt  rxconfig.py
local_auth_demo/alembic/versions/: 05267fabef38_.py  0f023cbe11c9_.py  95d05247342c_.py  cb01e050df85_.py
local_auth_demo/local_auth_demo/: custom_user_info.py  local_auth_demo.py
tests/: __init__.py  test_auth_api.py  test_middleware.py
