[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-local-auth"
version = "0.0.3"
description = "Reflex custom component local-auth"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Masen Furer", email = "m_github@0x26.net" }]
keywords = [
    "reflex",
    "reflex-custom-components"]

dependencies = [
    "reflex>=0.4.2",
    "bcrypt",
]

classifiers = [
  "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/masenf/reflex-local-auth"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]
